Fix jumping image/content

--- a/sass/display-featured-image-genesis.scss
+++ b/sass/display-featured-image-genesis.scss
@@ -4,7 +4,7 @@
 
 .big-leader {
 	overflow: hidden;
-	max-height: 100vh;
+	height: 100vh;
 	position: relative;
 
 	.wrap {
